fixed contrast ratio once and for all

--- a/style.css
+++ b/style.css
@@ -769,7 +769,7 @@ h4 {
 } 
 
 .bgc-atomic-tangerine {
-  background-color:#f7814b;
+  background-color: rgb(57, 51, 60);
 }
 
 .tc-white {
@@ -781,14 +781,14 @@ h4 {
 .text-center.tc-orange{
  font-size: 20px;
  font-weight: bold;
- color: #f7814b;  
+ color: #ff9462;  
 }
 
 
 
 .btn-atomic-tangerine {
-  background: #f7814b;
-  color: #ffffff !important;
+  background: rgb(57, 51, 60);
+  color: #ff9462 !important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -797,7 +797,7 @@ h4 {
 }
 
 .ltc-white {
-  color: #ffffff !important;
+  color: #ff9462 !important;
 }
 
 .ltc-white:hover {
@@ -805,7 +805,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-  color: #f7814b !important;
+  color: #ff9462 !important;
 }
 
 .ltc-atomic-tangerine:hover {
